--- a/css_basics/css/style2.css
+++ b/css_basics/css/style2.css
@@ -5,6 +5,14 @@ color: maroon;
 }
 h1
 {
-color: midnightblue;
+color: white;
 
+}
+p
+{
+    color: lightgray;
+}
+body 
+{
+    background-color: darkgray;
 }
