--- a/semantic_html/style.css
+++ b/semantic_html/style.css
@@ -5,3 +5,11 @@
     background-color: lightgray;
 
 }
+#box{
+width: 200px;
+height: 200px;
+background-color: lightblue;
+margin: 20px;
+padding: 20px;
+
+}
