--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,47 @@ color: midnightblue;
     text-align: center;
     font-size: 50px;
     }
+    *{
+margin: 0;
+padding: 0;
+
+    }
 section{
     display: flex;
-    width: 1000px;
-    height: 800px;
-    border-color: red;
-    border-width: 5px;
-    border-style: solid;
-
+   flex-grow: 1;
 }
+body {
+    transition: transform 1s;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  
+  body.invert {
+    transform: rotate(180deg);
+  }
+  #cookie-consent {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    max-width: 300px;
+    padding: 20px;
+    background-color: #f9edbe;
+    border: 1px solid #f0c36d;
+    text-align: center;
+    z-index: 1001;
+  }
+  
+  
+  #cookie-consent button {
+    background-color: #8ec760;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin-left: 10px;
+    cursor: pointer;
+  }
+  
